# x-twitter-mcp-server

./: .dockerignore  .env.example  README.md  fly.toml  pyproject.toml  requirements.txt  smithery.yaml
.github/workflows/: ci.yml
src/x_twitter_mcp/: http_server.py  oauth2_refresh.py  path_token_middleware.py  server.py  tracing.py
tests/: test_get_bookmarks.py  test_tracing.py
