[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
packages = ["src/x_twitter_mcp"]

[project]
name = "x-twitter-mcp"
version = "0.1.15"
description = "Twitter search tool for FastMCP using Tweepy"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Rafal Janicki", email = "rafal@kult.io" }
]
dependencies = [
    "fastmcp>=3.4,<4",
    "tweepy>=4.15.0",
    "python-dotenv>=0.21.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.2",
    "opentelemetry-api>=1.42.0",
    "opentelemetry-sdk>=1.42.0",
    "opentelemetry-exporter-otlp-proto-http>=1.42.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rafaljanicki/x-twitter-mcp-server"
Issues = "https://github.com/rafaljanicki/x-twitter-mcp-server/issues"

[project.optional-dependencies]
# Test-only deps. pytest-asyncio is required by tests/test_tracing.py
# (@pytest.mark.asyncio) but was previously undeclared, so a clean install
# could not run the suite green. Declared here so CI is reproducible.
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
x-twitter-mcp-server = "x_twitter_mcp:server.run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]